kubernetes/clusters/live/config/homepage/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    istio.io/dataplane-mode: ambient
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    network-policy.homelab/profile: internal
    access.network-policy.homelab/kube-api: "true"
