kubernetes/clusters/live/config/homepage/internal-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-internal
  namespace: homepage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Home"
    gethomepage.dev/group: "Platform"
    gethomepage.dev/icon: "mdi-home"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=homepage"
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "home.${internal_domain}"
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
